fix: fixed some problems